<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_bookmarks"
          android:icon="@drawable/bookmark_collection"
          android:title="@string/bookmarks"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_dict_notes"
          android:title="@string/dict_notes"
          app:showAsAction=""/>
    <item android:id="@+id/menu_item_dict_annotations"
          android:title="@string/dict_annotations"
          app:showAsAction=""/>
    <item android:id="@+id/menu_item_dict_abbreviations"
          android:title="@string/dict_abbreviations"
          app:showAsAction=""/>
    <item android:id="@+id/menu_item_about_app"
          android:title="@string/about_app"
          app:showAsAction=""/>
</menu>
